--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
     <!-- We need this line below for responsiveness! -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="cards/css/style.css">
   </head>
   <body>
     <div class="container">
@@ -14,14 +14,14 @@
       </div>
       <br>
 
-      <div class="card-category" style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url(images/breakfast.png)">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url(cards/images/breakfast.png)">
         Breakfast
       </div>
 
     <br>
 
     <div class="card-product">
-      <img src="images/skateboard.png" alt="product">
+      <img src="cards/images/skateboard.png" alt="product">
       <div class="card-product-info">
         <h2>Skateboard</h2>
         <p>Check out product info</p>
@@ -31,14 +31,14 @@
     <br>
 
     <div class="card-trip">
-      <img src="images/Travelpic.png" alt="travel">
+      <img src="cards/images/Travelpic.png" alt="travel">
         <div class="footer">
           <div class="card-trip-info">
             <h2>Destination</h2>
             <p>Trip details here</p>
           </div>
           <h2>¥1,000,000</h2>
-          <img src="images/avatar.jpeg" alt="avatar" class ="avatar-circle card-trip-user" >
+          <img src="cards/images/avatar.jpeg" alt="avatar" class ="avatar-circle card-trip-user" >
           </div>
         </div>
       </div>
